--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@apollo/client": "3.4.16",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "graphql": "15.7.2",
     "react": "17.0.1",
     "react-native": "0.64.0",
-    "react-native-navigation": "^7.12.0",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-modal": "^13.0.0",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.9.0",
+    "react-native-size-matters": "^0.4.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
